Tests/pass/shortTags.php
<html>
<?php
// Always use the full tags to delimit PHP code:
$foo = 'boo';
?>
</html>