Tests/fail/shortTags.php
<?
// This test only fails as expected if short tags are enabled in php.ini

// Always use the full tags to delimit PHP code:
$foo = 'boo';

// Always include a closing PHP tag at the end of code files.
?>
